# LangChain

./: .cursorrules  .envrc  .gitignore  README.md  pyproject.toml  requirements.txt  setup_env.sh  start_gradio.sh  start_prompt_templates.sh  update_gemini_models.py  學習建議.md
.claude/: settings.local.json
.cursor/: config.json
.devcontainer/: Dockerfile  devcontainer.json
0_連結ollama/: README.md  lesson.ipynb  lesson1.ipynb  lesson2.ipynb  lesson3.ipynb  test.ipynb
1_chat_models/: 1_chat_model_basic.py  1_chat_model_basic_google.py  1_chat_model_basic_ollama.py  1chat_model_basic.ipynb  1ollama_gradio.py  2.對話管理的實用性_gemini.py  2.對話管理的實用性_ollama.py  2.簡單的對話管理.ipynb  2.簡單的對話管理_gemini.ipynb  2.簡單的對話管理_gpt-4o.ipynb  2.簡單的對話管理_ollama.ipynb  2_chat_model_basic_conversation.py  2_chat_model_basic_conversation_google.py  2_chat_model_basic_conversation_ollama.py  3.多模型回應和比較_gemini_ollama.ipynb  3_chat_model_alternatives.py  3_chat_model_alternatives1.py  4.記憶對話記錄_gemini.ipynb  4.記憶對話記錄_ollama.ipynb  4_chat_model_conversation_with_user_google.py  4_chat_model_conversation_with_user_ollama.py  5.儲存歷史訊息至Firebase_Firestore.ipynb  Chat Mode.md  README.md  chat_model_basic.ipynb  對話管理的實用性_輸出結果.md
2_prompt_templates/: 1.完整範例_無配合模型.ipynb  2.完整範例_配合olloma.ipynb  3.完整範例_配合gemini.ipynb  README.md
3_chains/: 10_chains_lambda_integration_gemini.ipynb  10_chains_lambda_integration_ollama.ipynb  1_chains_basics_gemini.ipynb  1_chains_basics_ollama.ipynb  2_chains_extended_gemini.ipynb  2_chains_extended_ollama.ipynb  2_chains_under_the_hood_gemini.ipynb  3_chains_extended_gemini.ipynb  (+33 more)
(+90 files in other folders)
